first commit - working code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,8 @@
-#server.port                         = 8000
-#
-#keycloak.realm                      = test-demo
-#keycloak.auth-server-url            = http://localhost:8080/auth
-#keycloak.ssl-required               = external
-#keycloak.resource                   = springboot-microservice
-#keycloak.credentials.secret         = 9ca03344-9230-40b6-9971-dbd32227d97f
-#keycloak.use-resource-role-mappings = true
-#keycloak.bearer-only                = true
-
 server.port                         = 8000
 keycloak.realm                      = Demo-Realm
-keycloak.auth-server-url            = http://localhost:8080/auth
+keycloak.auth-server-url            = http://localhost:8081
 keycloak.ssl-required               = external
 keycloak.resource                   = springboot-microservice
-keycloak.credentials.secret         = 78c15ca2-4fda-4817-8785-ff2a81160036
+keycloak.credentials.secret         = T4pDjc6K1AMiPgH3UXoByoSrccGDqKD5
 keycloak.use-resource-role-mappings = true
 keycloak.bearer-only                = true
